packages/kit/test/apps/basics/src/routes/load/invalidation/search-params/server/+page.server.js
let count = 0;

export function load({ url }) {
	url.searchParams.get('tracked');
	return {
		count: count++
	};
}
